fix navbar collapsable

--- a/sass/components/_icon.sass
+++ b/sass/components/_icon.sass
@@ -1,3 +1,8 @@
+.icon,
+i.fa
+    &::before
+        font-family: FontAwesome !important
+
 .icon-size-5 
     .icon
         height: 42px !important
