--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -96,9 +96,9 @@ ul.nav.navbar-nav
                 color: rgba(0,0,0,1) 
             &[aria-expanded="false"],
             &.collapsed
+                background-color: transparent
                 transition: border-width 0.2s ease-in-out
                 border-width: 0px
-                background-color: $nav-drawer-link-hover
                 .collapser
                     color: $nav-drawer-link 
             ul
