--- a/sass/components/_utils.sass
+++ b/sass/components/_utils.sass
@@ -1,10 +1,9 @@
 *
-    font-family: $main-font-regular
+    font-family: $main-font-regular !important
 
 .logo-un
-    @include background-image(url([[pix:theme_univnumerique|logo-un]]), $position-x: 50%, $position-y: 100%, $repeat: no-repeat, $size: contain)
+    +background-image(url([[pix:theme_univnumerique|logo-un]]), $position-x: 50%, $position-y: 100%, $repeat: no-repeat, $size: contain)
     height: 100px
-
 
 .blue
     color: $main
